# api-companion

./: .gitignore  CHANGELOG.md  Cargo.toml  ICEBOX.md  LICENSE  PLAN.md  README.en.md  README.ja.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ai.rs  commands.rs  lib.rs  main.rs  ops.rs  postman.rs  share.rs  teamws.rs
apps/desktop/src/components/: AiSettingsModal.tsx  AssertionEditor.tsx  CodegenModal.tsx  CollectionsTree.tsx  CommandPalette.tsx  CurlModal.tsx  DiagnosePanel.tsx  EnvEditorModal.tsx  EnvSwitcher.tsx  ExplainPanel.tsx  ExportModal.tsx  GenerateModal.tsx  GenerateTestsModal.tsx  KeyValueEditor.tsx  OpsModal.tsx  PostmanModal.tsx  RequestEditor.tsx  ResponseView.tsx  RunReportModal.tsx  SaveModal.tsx  Sidebar.tsx  TabsBar.tsx  TeamWorkspaceModal.tsx  TopBar.tsx  UpdateBanner.tsx  WorkspaceManager.tsx  WorkspaceSwitcher.tsx
apps/desktop/src/lib/: ipc.ts  updater.ts
apps/desktop/src/state/: store.ts
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs  prompts.rs  provider.rs  scrub.rs
crates/apitest/: Cargo.toml
crates/apitest/src/: main.rs
crates/assertions/: Cargo.toml
crates/assertions/src/: lib.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: lib.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs
crates/curl-tools/: Cargo.toml
crates/curl-tools/src/: lib.rs
crates/diagnose/: Cargo.toml
crates/diagnose/src/: lib.rs
crates/http-engine/: Cargo.toml  README.md
crates/http-engine/src/: lib.rs
crates/ipc-types/: Cargo.toml  README.md
crates/ipc-types/src/: lib.rs
crates/ops-db/: Cargo.toml
crates/ops-db/src/: lib.rs
crates/ops-ssh/: Cargo.toml
crates/ops-ssh/src/: lib.rs
crates/postman-import/: Cargo.toml
crates/postman-import/src/: lib.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/smart-vars/: Cargo.toml
crates/smart-vars/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/workspace/: Cargo.toml
crates/workspace-sync/: Cargo.toml
crates/workspace-sync/src/: lib.rs
crates/workspace/src/: format.rs  lib.rs  vars.rs
docs/: RELEASE.md  index.html
docs/adr/: 0001-tauri-v2.md  0002-hyper-not-reqwest.md  0003-toml-file-format.md  0004-quickjs-runtime.md  0005-ai-in-rust-core.md
