# Cargo workspace cho API Companion (phần Rust core).
# Frontend (React) quản lý riêng bằng pnpm workspace — xem pnpm-workspace.yaml.
[workspace]
resolver = "2"
members = [
  "crates/ipc-types",
  "crates/http-engine",
  "crates/storage",
  "crates/curl-tools",
  "crates/workspace",
  "crates/workspace-sync",
  "crates/postman-import",
  "crates/secrets",
  "crates/ai-core",
  "crates/smart-vars",
  "crates/assertions",
  "crates/diagnose",
  "crates/ops-db",
  "crates/ops-ssh",
  "crates/bundle",
  "crates/codegen",
  "crates/apitest",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition = "2021"
version = "0.4.4"
license = "MIT"
authors = ["API Companion"]
rust-version = "1.80"

[workspace.dependencies]
# --- serialization & errors (dùng chung) ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# --- async runtime ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"

# --- HTTP engine (hyper stack, KHÔNG reqwest — xem docs/adr/0002) ---
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
url = "2"

# --- TLS: rustls + ring provider (tránh aws-lc-rs cần NASM trên Windows) ---
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
webpki-roots = "0.26"
rustls-pki-types = "1"
x509-parser = "0.16"

# --- decompression body ---
flate2 = "1"
brotli = "7"

# --- utils ---
base64 = "0.22"

[profile.dev]
# Build lib deps ở opt-level cao để chạy nhanh hơn khi dev, giữ crate của mình debug.
opt-level = 0

[profile.dev.package."*"]
opt-level = 2
