[package]
name = "bundle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Định dạng bundle native API Companion để export/import (share collection/workspace giữa user)."

[dependencies]
ipc-types = { path = "../ipc-types" }
serde = { workspace = true }
serde_json = { workspace = true }
