[package]
name = "diagnose"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Chẩn đoán lỗi response bằng rule tĩnh (fallback tức thì cho AI Diagnose)."

[dependencies]
ipc-types = { path = "../ipc-types" }
serde_json = { workspace = true }
base64 = { workspace = true }
