[package]
name = "http-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Engine HTTP dựng trên hyper: đo timing từng phase (DNS/TCP/TLS/TTFB), capture TLS info, raw body, redirects."

[dependencies]
ipc-types = { path = "../ipc-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
x509-parser = { workspace = true }
flate2 = { workspace = true }
brotli = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
