[package]
name = "secrets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lưu secret của biến environment vào OS keychain (Windows Credential Manager...) qua keyring."

[dependencies]
thiserror = { workspace = true }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
