[package]
name = "workspace-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Team workspace: đồng bộ file TOML local ↔ MySQL server tự dựng (mirror + 3-way sync)."

[dependencies]
ipc-types = { path = "../ipc-types" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
sha2 = "0.10"
tokio = { workspace = true, features = ["time"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql"] }

[dev-dependencies]
tempfile = "3"
